headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headplane
    labels:
    goldilocks.fairwinds.com/enabled: "true"
