headscale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  namespace: headscale
  labels:
    app: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      shareProcessNamespace: true
      serviceAccountName: headscale
      containers:
      - name: headplane
        image: ghcr.io/tale/headplane:0.6.0
        volumeMounts:
        - name: headplane-data
          mountPath: /etc/headplane
          readOnly: true
        - name: headplane-data
          mountPath: /var/lib/headplane
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
          limits:
            memory: "256Mi"
            cpu: "200m"

      - name: headscale
        image: headscale/headscale:0.26.0
        args: ['serve']
        volumeMounts:
        - name: headscale-data
          mountPath: /var/lib/headscale
        - name: headscale-config
          mountPath: /etc/headscale
        resources:
          requests:
            memory: "256Mi"
            cpu: "10m"
          limits:
            memory: "512Mi"
            cpu: "500m"

      volumes:
        - name: headscale-data
          persistentVolumeClaim:
            claimName: headscale-data
        - name: headplane-data
          persistentVolumeClaim:
            claimName: headplane-data
        - name: headscale-config
          configMap:
            name: headplane-config
