headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headplane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: hs.lag0.com.br
    http:
      paths:
      - backend:
          service:
            name: headplane
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: hp.lag0.com.br
    http:
      paths:
      - backend:
          service:
            name: headplane
            port:
              number: 3000
        path: /admin
        pathType: Prefix
  tls:
    - hosts:
        - hp.lag0.com.br
        - hs.lag0.com.br
      secretName: headscale-tls
